[IMP] removing unused method

--- a/addons/sale/report/sale_report_view.xml
+++ b/addons/sale/report/sale_report_view.xml
@@ -60,7 +60,7 @@
                 <field name="date"/>
                 <filter string="This Year" name="year" invisible="1" domain="[('date','&lt;=', time.strftime('%%Y-12-31')),('date','&gt;=',time.strftime('%%Y-01-01'))]"/>
                 <filter name="Quotations" domain="[('state','in',('draft'))]"/>
-                <filter name="Sales" string="Sales" domain="[('state','not in',('draft', 'cancel'))]"/>
+                <filter name="Sales" string="Sales" domain="[('state','not in',('draft', 'cancel', 'sent'))]"/>
                 <separator/>
                 <field name="partner_id"/>
                 <field name="product_id"/>
