--- a/addons/sale/wizard/sale_make_invoice_advance.xml
+++ b/addons/sale/wizard/sale_make_invoice_advance.xml
@@ -11,13 +11,12 @@
                         them before validation.
                     </p>
                     <group>
+                        <field name="count" invisible="1"/>
                         <field name="advance_payment_method" class="oe_inline" widget="radio"
-                            attrs="{'invisible': [('count','&gt;',1)]}"
-                            on_change="onchange_method(advance_payment_method, product_id)"/>
+                            attrs="{'invisible': [('count','&gt;',1)]}"/>
                         <field name="product_id"
-                            on_change="onchange_method(advance_payment_method, product_id)"
-                            context="{'search_default_services': 1}"
-                            attrs="{'invisible': [('advance_payment_method','!=','fixed')]}"/>
+                            context="{'search_default_services': 1}" class="oe_inline"
+                            attrs="{'invisible': [('advance_payment_method','not in', ('fixed','percentage'))]}"/>
                         <label for="amount" attrs="{'invisible': [('advance_payment_method', 'not in', ('fixed','percentage'))]}"/>
                         <div attrs="{'invisible': [('advance_payment_method', 'not in', ('fixed','percentage'))]}">
                             <field name="amount"
